[package]
name = "esubpoena-tolls-tool"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Professional tool for parsing telecommunication XML data and exporting to Excel with analytics"

[dependencies]
# GUI Framework
eframe = "0.26.0"
egui = "0.26.0"

# XML Parsing
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive"] }

# Excel Export
xlsxwriter = "0.4.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
walkdir = "2.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
regex = "1.0"
lazy_static = "1.4"

[features]
default = []
release = []

[[bin]]
name = "esubpoena-tolls-tool"
path = "src/main.rs" 